--- a/src/app/modules/channels/v2/edit/social-links.component.scss
+++ b/src/app/modules/channels/v2/edit/social-links.component.scss
@@ -1,19 +1,24 @@
-.m-channelEdit__hashtagInput {
+.m-channelEdit__socialLinkInput {
   > * + * {
     margin-left: 10px;
   }
 
-  m-hashtags__typeaheadInput {
+  input {
     flex: 1;
   }
 }
 
-.m-channelEdit__hashtagList {
+.m-channelEdit__socialLinkList {
   list-style: none;
   margin: 0;
   padding: 0;
+  width: 65%;
 
-  .m-channelEditHashtagList__item {
+  @media screen and (max-width: $max-mobile) {
+    width: 100%;
+  }
+
+  .m-channelEditSocialLinkList__item {
     display: inline-flex;
     flex-direction: row;
     align-items: center;
@@ -24,6 +29,7 @@
     border-radius: 19px;
     font-size: 14px;
     line-height: 19px;
+    word-break: break-all;
 
     &:last-child {
       margin-right: 0;
@@ -35,7 +41,7 @@
       background: themed($m-bgColor--secondary);
     }
 
-    .m-channelEditHashtagListItem__remove {
+    .m-channelEditSocialLinkListItem__remove {
       padding: 0 3px;
       cursor: pointer;
 
