(fix): Skewed submit button when label is short

--- a/src/app/common/components/shadowbox-submit-button/shadowbox-submit-button.component.scss
+++ b/src/app/common/components/shadowbox-submit-button/shadowbox-submit-button.component.scss
@@ -3,7 +3,7 @@
   position: relative;
   cursor: pointer;
   padding: 10px 20px;
-
+  min-width: 100px;
   min-height: 42px;
   border: 0;
   transition: all 0.2s ease;
