Fixed mismatch in shown notification labels #2780

--- a/src/app/modules/notifications/notifications.component.scss
+++ b/src/app/modules/notifications/notifications.component.scss
@@ -78,6 +78,12 @@ minds-notifications {
   .mdl-tabs__tab {
     overflow: visible;
     flex: 1;
+    padding: 0 12px;
+    text-transform: unset;
+
+    m-tooltip {
+      padding-right: 4px;
+    }
 
     .m-full-label {
       display: inline-block;
