--- a/src/app/modules/ads/ads.scss
+++ b/src/app/modules/ads/ads.scss
@@ -1,3 +1,4 @@
+@import '../../foundation/grid-values';
 .m-ad-block {
   display: block;
   width: 100%;
@@ -8,6 +9,20 @@
 
     .m-ad-boost-entity {
       padding: 0 0 16px 0;
+
+      minds-card-user {
+        minds-button-subscribe {
+          button.m-btn--with-icon {
+            @media screen and (max-width: $m-grid-max-tablet) {
+              padding-left: 12px;
+              padding-right: 12px;
+              i.material-icons {
+                display: none;
+              }
+            }
+          }
+        }
+      }
     }
   }
 
