YouTube marketing page2

--- a/src/app/common/components/marketing/footer.component.html
+++ b/src/app/common/components/marketing/footer.component.html
@@ -58,6 +58,12 @@
             Events
           </a>
         </li>
+
+        <li>
+          <a href="https://teespring.com/stores/minds" i18n>
+            Store
+          </a>
+        </li>
       </ul>
     </div>
 
@@ -116,8 +122,8 @@
         </li>
 
         <li>
-          <a href="https://teespring.com/stores/minds" i18n>
-            Store
+          <a routerLink="/youtube-migration" i18n>
+            YouTube Migration
           </a>
         </li>
       </ul>
