--- a/src/app/modules/media/youtube-migration/marketing/marketing.component.html
+++ b/src/app/modules/media/youtube-migration/marketing/marketing.component.html
@@ -149,7 +149,7 @@
       </div>
       <div class="m-grid m-marketing__wrapper">
         <div
-          class="m-grid__column-12 m-grid__column-12--mobile m-marketing__body m-marketing__body--extra"
+          class="m-grid__column-12 m-grid__column-12--mobile m-marketing__body"
         >
           <button class="mf-button mf-button--alt" (click)="action()" i18n>
             Break free from Google
