--- a/src/app/modules/composer/components/base/base.component.html
+++ b/src/app/modules/composer/components/base/base.component.html
@@ -38,8 +38,11 @@
     </div>
 
     <!-- Blog error -->
-    <div class="m-composerBase__error" *ngIf="blogsError$ | async">
-      {{ blogsError$ | async }}
+    <div
+      class="m-composerBase__error"
+      *ngIf="blogsError$ | async as blogsError"
+    >
+      {{ blogsError }}
     </div>
 
     <!-- Local state error -->
