--- a/src/app/common/components/sidebar-widget/sidebar-widget.component.scss
+++ b/src/app/common/components/sidebar-widget/sidebar-widget.component.scss
@@ -21,9 +21,25 @@ m-sidebarWidget {
   line-height: 24px;
   padding: $sidebarSpacing;
   padding-bottom: $sidebarSpacing / 2;
+  padding-right: 40px; // Allow for dimiss
   margin: 0;
+  font-weight: 500;
   @include m-theme() {
     color: themed($m-textColor--primary);
+  }
+}
+
+.m-sidebarWidget__dismiss {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+
+  > i {
+    font-size: 18px;
+    cursor: pointer;
+    @include m-theme() {
+      color: themed($m-textColor--tertiary);
+    }
   }
 }
 
