--- a/src/app/modules/captcha/captcha.component.scss
+++ b/src/app/modules/captcha/captcha.component.scss
@@ -3,6 +3,11 @@ m-captcha {
   img {
     margin-bottom: $minds-margin;
   }
+  .m-input {
+    @include m-theme() {
+      background-color: themed($m-white);
+    }
+  }
 }
 
 .m-captcha__refresh {
