Convert ETH balance to Wei using EthJS util #2952

--- a/src/app/modules/wallet/balances/tokens/balance.component.html
+++ b/src/app/modules/wallet/balances/tokens/balance.component.html
@@ -117,7 +117,7 @@
 
       <div class="m-wallet--balance--addresses-address-col">
         <span class="m-wallet--balance--addresses-address-balance">
-          {{ ethBalance | token: 18 | number }}
+          {{ ethBalance | number }}
         </span>
       </div>
     </div>
