(fix): typo in tooltip for captcha

--- a/src/app/modules/blogs/edit/edit.html
+++ b/src/app/modules/blogs/edit/edit.html
@@ -60,7 +60,7 @@
     <label>
       <span>Captcha</span>
       <m-tooltip icon="help">
-        Please enter to characters below to confirm that you are not a robot
+        Please enter the characters below to confirm that you are not a robot
       </m-tooltip>
     </label>
     <m-captcha name="blog-captcha" [(ngModel)]="captcha"></m-captcha>
