--- a/src/app/common/components/shadowbox-layout/shadowbox-layout.component.scss
+++ b/src/app/common/components/shadowbox-layout/shadowbox-layout.component.scss
@@ -3,6 +3,13 @@ m-shadowboxLayout {
   @include m-theme() {
     box-shadow: 0px 0px 10px -3px rgba(themed($m-black-always), 0.3);
   }
+  &.m-shadowboxLayout__noMetricTabs {
+    .m-shadowboxLayout__bottom {
+      @include m-theme() {
+        border-top-color: rgba(0, 0, 0, 0);
+      }
+    }
+  }
 }
 
 m-body.has-v3-navbar {
@@ -28,7 +35,6 @@ m-shadowboxHeader.isScrollable {
   transition: all 0.3s ease;
   @include m-theme() {
     border-top: 1px solid themed($m-borderColor--primary);
-    background-color: themed($m-bgColor--secondary);
   }
 }
 .m-shadowboxLayout__footer {
