--- a/src/app/modules/modals/v2/modal-v2.component.scss
+++ b/src/app/modules/modals/v2/modal-v2.component.scss
@@ -3,6 +3,8 @@
 .m-modalV2__wrapper {
   width: 100vw;
   height: 100vh;
+  max-width: 100%;
+  max-height: 100%;
   padding: 0;
   overflow-x: hidden;
   overflow-y: auto;
