(fix): typo in disclaimer - closes #2958

--- a/src/app/modules/discovery/disclaimer/disclaimer.component.html
+++ b/src/app/modules/discovery/disclaimer/disclaimer.component.html
@@ -1,5 +1,5 @@
 <m-sidebarWidget
-  title="Minds is a public neutral platform"
+  title="Minds is a neutral public platform"
   dismissibleId="discovery-disclaimer-2020"
 >
   <div class="m-sidebarWidget__body">
@@ -7,7 +7,7 @@
       Our
       <a href="https://change.minds.com" target="_blank">research-based</a>
       approach in handling misinformation and other types of controversial
-      lawful content is to facilitate civil disource through free speech, which
+      lawful content is to facilitate civil discourse through free speech, which
       is the only way to change someone’s mind. It is your choice to engage with
       someone, keep scrolling, report or block.
     </p>
