(chore): change register link on login page - closes #2855

--- a/src/app/modules/forms/login/login.html
+++ b/src/app/modules/forms/login/login.html
@@ -131,7 +131,7 @@
     *ngIf="showTitle"
     i18n
   >
-    Join the conversation
+    Join Minds Now
   </a>
 
   <div class="mdl-card__actions">
