Auto-close navigation on mobile when selecting a group #2971

--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.html
@@ -57,6 +57,7 @@
       class="m-groupSidebarMarkersList__item"
       [class.has-gathering]="hasNewNavigation && (group.hasGathering$ | async)"
       [routerLink]="['/groups/profile', group.guid]"
+      (click)="onGroupClick()"
     >
       <m-tooltip [anchor]="tooltipsAnchor" [useParentPosition]="true">
         <img
